deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: battlecastles
  labels:
    name: battlecastles
    environment: production
